[gd_scene load_steps=4 format=3 uid="uid://b3pqjslgek7v3"]

[ext_resource type="Script" path="res://scenes/gui/main_menu/main_menu.gd" id="1_mug8p"]
[ext_resource type="AudioStream" uid="uid://dhgv062lv8scl" path="res://sfx_pressed.mp3" id="2_wacxx"]
[ext_resource type="PackedScene" uid="uid://c4ncpfggwnyia" path="res://scenes/gui/options_menu/options_menu.tscn" id="3_ec1wh"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mug8p")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxButtons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 10

[node name="btn_play" type="Button" parent="MarginContainer/VBoxContainer/VBoxButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Play"

[node name="btn_options" type="Button" parent="MarginContainer/VBoxContainer/VBoxButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Options"

[node name="btn_quit" type="Button" parent="MarginContainer/VBoxContainer/VBoxButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="sfx_pressed" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/VBoxButtons"]
stream = ExtResource("2_wacxx")
bus = &"sfx"

[node name="options_menu" parent="." instance=ExtResource("3_ec1wh")]
layout_mode = 1
offset_left = 9.0
offset_top = 48.0
offset_right = 9.0
offset_bottom = 48.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxButtons/btn_play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxButtons/btn_play" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxButtons/btn_options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxButtons/btn_options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxButtons/btn_quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxButtons/btn_quit" to="." method="_on_btn_quit_pressed"]
